web template created

--- a/web/index.htm
+++ b/web/index.htm
@@ -1,9 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>Location Based Disease</title>
+	<link rel="stylesheet" type="text/css" href="css/lbd.css">
 </head>
-<body>
-
+<body ng-app="lbd">
+	<div ng-view>
+		
+	</div>
+	<script type="text/javascript" src="js/vendor/angular.min.js"></script>
+	<script type="text/javascript" src="js/gps.js"></script>
 </body>
 </html>
