--- a/web/index.htm
+++ b/web/index.htm
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 	<title>Location Based Disease</title>
 	<link rel="stylesheet" type="text/css" href="css/lbd.css">
+    <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
+    <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="css/bootstrap-theme.min.css">
 </head>
 <body ng-app="lbd">
 	<div ng-view>
 		
 	</div>
+    <script type="text/javascript" src="js/vendor/bootstrap.min.js"></script>
 	<script type="text/javascript" src="js/vendor/angular.min.js"></script>
 	<script type="text/javascript" src="js/gps.js"></script>
 </body>
