--- a/web/index.htm
+++ b/web/index.htm
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
 	<title>Location Based Disease</title>
-	<link rel="stylesheet" type="text/css" href="css/lbd.css">
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
+    <link rel="stylesheet" type="text/css" href="css/lbd.css">
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/bootstrap-theme.min.css">
 </head>
@@ -11,6 +11,7 @@
 	<div ng-view>
 		
 	</div>
+    <script src="http://code.jquery.com/jquery-2.0.3.min.js"></script>
     <script type="text/javascript" src="js/vendor/bootstrap.min.js"></script>
 	<script type="text/javascript" src="js/vendor/angular.min.js"></script>
 	<script type="text/javascript" src="js/gps.js"></script>
