--- a/web/index.htm
+++ b/web/index.htm
@@ -11,7 +11,9 @@
 	<div ng-view>
 		
 	</div>
+	<script src="http://maps.googleapis.com/maps/api/js?sensor=false&language=en"></script>
 	<script type="text/javascript" src="js/vendor/angular.min.js"></script>
+	<script src="js/vendor/angular-google-maps.js"></script>
     <script type="text/javascript" src="js/vendor/jquery-2.0.3.min.js"></script>
     <script type="text/javascript" src="js/vendor/bootstrap.min.js"></script>
 	<script type="text/javascript" src="js/gps.js"></script>
