--- a/web/index.htm
+++ b/web/index.htm
@@ -6,6 +6,7 @@
     <link rel="stylesheet" type="text/css" href="css/lbd.css">
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/bootstrap-theme.min.css">
+    <link rel="stylesheet" type="text/css" href="css/select2.css">
 </head>
 <body ng-app="lbd">
 	<div ng-view>
@@ -16,6 +17,7 @@
 	<script src="js/vendor/angular-google-maps.js"></script>
     <script type="text/javascript" src="js/vendor/jquery-2.0.3.min.js"></script>
     <script type="text/javascript" src="js/vendor/bootstrap.min.js"></script>
+    <script type="text/javascript" src="js/vendor/select2.js"></script>
 	<script type="text/javascript" src="js/gps.js"></script>
 </body>
 </html>
