--- a/web/index.htm
+++ b/web/index.htm
@@ -6,18 +6,19 @@
     <link rel="stylesheet" type="text/css" href="css/lbd.css">
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/bootstrap-theme.min.css">
-    <link rel="stylesheet" type="text/css" href="css/select2.css">
+    <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body ng-app="lbd">
 	<div ng-view>
 		
 	</div>
-	<script src="http://maps.googleapis.com/maps/api/js?sensor=false&language=en"></script>
+	<script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?sensor=false&language=en"></script>
 	<script type="text/javascript" src="js/vendor/angular.min.js"></script>
-	<script src="js/vendor/angular-google-maps.js"></script>
+	<script type="text/javascript" src="js/vendor/angular-google-maps.js"></script>
     <script type="text/javascript" src="js/vendor/jquery-2.0.3.min.js"></script>
-    <script type="text/javascript" src="js/vendor/select2.js"></script>
     <script type="text/javascript" src="js/vendor/bootstrap.min.js"></script>
+    <script type="text/javascript" src="js/vendor/ui-bootstrap-custom-0.6.0.min.js"></script>
+    <script type="text/javascript" src="js/vendor/ui-bootstrap-custom-tpls-0.6.0.min.js"></script>
 	<script type="text/javascript" src="js/gps.js"></script>
 </body>
 </html>
